src/test/ui/issues/issue-24352.stderr
error[E0277]: cannot subtract `{integer}` from `f64`
  --> $DIR/issue-24352.rs:3:12
   |
LL |     1.0f64 - 1
   |            ^ no implementation for `f64 - {integer}`
   |
   = help: the trait `std::ops::Sub<{integer}>` is not implemented for `f64`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
